--- a/css/main.css
+++ b/css/main.css
@@ -213,8 +213,231 @@ footer {
 	transition-duration: 2s;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
 	/* меню */
+	.nav {
+		min-width: 320px;
+	}
+
+	.nav ul {
+		width: 100px;
+		padding: 5px 0;
+		position: relative;
+		top: 0;
+		left: 0;
+	}
+
+	.nav ul:hover li {
+		display: inline-block;
+		margin: 0 0 0px;
+		padding-right: 10px;
+		width: 60px;
+
+	}
+
+	.nav li {
+		padding: 0;
+		display: none;
+	}
+
+	.nav a {
+		background: #999;
+		color: #fff;
+		display: block;
+		width: 100px;
+		text-align: center;
+	}
+
+	.nav a:hover {
+		color: #000;
+	}
+
+	.nav .current {
+		display: block;
+	}
+	
+	.logo {					/* логотип */
+		width: 190px;
+		position: relative;
+		top: 20px;
+ 	}
+	.background {
+		width: 100%;
+		min-width: 320px;
+		height: auto;
+
+	}
+
+	.content1 {				/* контейнер для тексту і зображення */ 
+		width: 600px;
+		margin-left: auto;
+		margin-right: auto;
+		display: flex;
+		flex-flow: row wrap;
+	}
+
+	.text-container {
+		width: 300px;
+		color: white;
+		margin: 30px auto;
+		font-size: 17px;
+	}
+
+	.text-container p {
+		margin: 0 0 30px 0;
+		text-align: center;
+
+	}
+
+	button {
+		width: 90px;
+		height: 35px;
+		background-color: #787677;
+		float: left;
+		margin: 0 30px 0;
+		border-radius: 4px;
+		outline: none;
+	}
+
+	.img1 {
+		width: 280px;
+		margin: 10px auto;
+	}
+
+	.content2 {				/* контейнер для тексту по центру */
+		width: 320px;
+		height: 100px;
+		margin-left: auto;	
+		margin-right: auto;
+		text-align: center;
+		padding-top: 20px;
+	}
+
+	.content2 p {
+		margin-top: 7px;
+		margin-bottom: 7px;
+	}
+
+	.row {
+		background-color: grey;
+		height: 5px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.header1 {
+		width: 100px;
+		height: 15px;
+	}
+
+	.first {
+		width: 200px;
+	}
+
+	.second {
+		width: 250px;
+	}
+
+	.third {
+		width: 180px;
+	}
+
+	hr {
+		width: auto;
+	}
+
+	footer {				/* footer */
+		width: 100%;
+		height: auto;	
+	}
+
+	.content3 {
+		width: 600px;
+		height: auto;
+		margin: 20px auto;
+	}
+
+	.arrow {
+		width: 30px;
+		height: 30px;
+		margin-top: 85px;
+		display: none
+	}
+
+	.left {
+		float: left;
+		display: none;
+	}
+
+	.right {
+		float: right;
+		display: none;
+	}
+
+	.hidden_container {
+		width: inherit;
+		height: inherit;
+		overflow: hidden;
+
+	}
+
+	.slider {
+		width: inherit;
+		height: inherit;
+		display: flex;
+		flex-flow: row wrap;
+		justify-content: center;
+	}
+
+	.img{
+		width: 300px;
+		height: auto;
+	}
+
+	.img p {
+		text-align: center;
+	}
+
+	.check {
+		display: none
+	}
+
+	.checkButton {
+		display: none;
+	}
+
+	#left_btn:checked  ~ .hidden_container .slider {
+		transform: translate(0px);
+		transition-duration: 2s;
+	}
+	#left_btn:checked ~ .hidden_container .slider .img{
+		width: 120px;
+		transition-duration: 2s;
+	}
+
+	#mid_btn:checked ~ .hidden_container .slider .img{
+		width: 200px;
+		transition-duration: 2s;
+	}
+
+	 #mid_btb:checked  ~ .hidden_container .slider {
+		transform: translate(0);
+		transition-duration: 2s;
+	}
+
+	#right_btn:checked  ~ .hidden_container .slider {
+		transform: translate(0px);
+		transition-duration: 2s;
+	}
+	#right_btn:checked ~ .hidden_container .slider .img{
+		width: 500px;
+		transition-duration: 2s;
+	}
+} 
+
+
+@media screen and (max-width: 600px) {
+	/* ТЕЛЕФОНИ -------------------------------------------------- */
 	.nav {
 		min-width: 320px;
 	}
